@@ -137,7 +137,10 @@ BUGFIXES:
   (Enis Soztutar via phunt)
 
   ZOOKEEPER-1799. SaslAuthFailDesignatedClientTest.testAuth fails
-   frequently on SUSE (Jeffrey Zhong via phunt)
+  frequently on SUSE (Jeffrey Zhong via phunt)
+
+  ZOOKEEPER-1557. jenkins jdk7 test failure in
+  testBadSaslAuthNotifiesWatch (Eugene Koontz via phunt)
 
 IMPROVEMENTS:
 
